syntax = "proto3";

option go_package = "./lib/proto";

package main;

service UserService { 
    rpc IsAuthenticated(AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    bool isAuthenticated = 1;
}
